# aknet

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerOptions.cmake  Dependencies.cmake
frontend/: pnpm-lock.yaml  tsconfig.app.json
src/: main.cpp
src/core/: CMakeLists.txt  version.h.in
src/core/include/: config.h  core.h  version.h
src/core/src/: core.cpp
src/core/tests/: CMakeLists.txt  core_tests.cpp
src/modules/logger/: CMakeLists.txt
src/modules/logger/include/: logger.h
src/modules/logger/src/: logger.cpp
src/modules/logger/tests/: logger_tests.cpp
src/ui/: package.json  pnpm-lock.yaml
src/ui/src/: App.tsx
src/utils/logger/: CMakeLists.txt
src/utils/logger/include/: logger.h
src/utils/logger/src/: logger.cpp
src/utils/logger/tests/: CMakeLists.txt  logger_tests.cpp
src/utils/settings/: CMakeLists.txt
src/utils/settings/include/: settings.h
src/utils/settings/src/: settings.cpp
src/utils/settings/tests/: CMakeLists.txt  settings_tests.cpp
tests/: CMakeLists.txt  integration_tests.cpp
